# Hantek6022API

./: .gitignore  CHANGELOG  MK_FW_VERSION.sh  Makefile  README.md  changelog  pyproject.toml
.github/workflows/: build_check.yml
Firmware/DDS120/: dds120-firmware.hex
Firmware/DSO6022BE/: fx2.mk  scope6022.inc
PyHT6022/: LibUsbScope.py  __init__.py  calibrate.py  capture.py  get_serial_number.py  upload_firmware.py
PyHT6022/Firmware/: version.py
PyHT6022/Firmware/DDS120/: dds120-firmware.hex
PyHT6022/Firmware/DSO6022BE/: dso6022be-firmware.hex  scope6022.inc
PyHT6022/Firmware/DSO6022BL/: dso6022bl-firmware.hex
debian/: changelog  com.github.ho-ro.hantek6022api.metainfo.xml  control  copyright  hantek6022api.install
examples/: get_serial_number_6022
man/: calibrate_6022.1  capture_6022.1  get_serial_number_6022.1  upload_firmware_6022.1
